--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sha2 = { version = "0.10" }
 serde = { version = "1" }
 rand = { version = "0.8" }
+aes = "0.8"
 hmac = "0.12"
 curve25519-dalek = { version = "4", features = [ "serde", "digest" ]}
 lazy_static = "1.4.0"
