--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
 lazy_static = "1.4"
 ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
 chrono = "0.4"
+itertools = "0.11"
 
 [dev-dependencies]
 serial_test = "2.0"
