--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
 ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
 chrono = "0.4"
 rand_chacha = "0.3"
+bincode = "1.3"
 
 [dev-dependencies]
 criterion = "0.5"
