--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
 ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
 chrono = "0.4"
 rand_chacha = "0.3"
-bincode = "1.3"
+postcard = "1.0"
+heapless = "0.7"
 
 [dev-dependencies]
 criterion = "0.5"
