--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ sha2 = { version = "0.10" }
 serde = { version = "1" }
 rand = { version = "0.8" }
 aes = "0.8"
+cbc = "0.1"
 hmac = "0.12"
 curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
 ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
