Separate dynamic library into different binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["lib"]
 
 [dependencies]
 sha2 = { version = "0.10" }
@@ -30,3 +30,6 @@ flatc = "0.2"
 [[bench]]
 name = "benchmarks"
 harness = false
+
+[workspace]
+members = ["dynlib"]
