--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "sandi"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Radames Cruz Moreno <racruzmo@microsoft.com", "Kim Laine <kim.laine@microsoft.com>" ]
+readme = "README.md"
+license = "MIT"
+repository = "https://GitHub.com/Microsoft/Sandi"
+homepage = "https://GitHub.com/Microsoft/Sandi"
+description = "A Rust implementation of the privacy-preserving accountability system, Sandi."
+exclude = [
+    "**/.gitignore",
+    ".gitignore",
+]
 
 [lib]
 crate-type = ["lib"]
